<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="@string/nameHint"
            android:hint="@string/nameHint"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <CheckBox
            style="@style/CheckBoxStyle"
            android:id="@+id/whipped_cream_checkbox"
            android:text="@string/whippedCream" />

        <CheckBox
            style="@style/CheckBoxStyle"
            android:id="@+id/chocolate_checkbox"
            android:text="@string/chocolate" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/QuantityButtonStyle"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/TextViewStyle"
                android:text="" />

            <Button
                style="@style/QuantityButtonStyle"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/orderSummary" />

        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/order_summary_text_view"
            android:text="" />

        <Button
            style="@style/orderButtonStyle"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>